--- a/zohoapp/templates/chartofaccount_view.html
+++ b/zohoapp/templates/chartofaccount_view.html
@@ -1311,7 +1311,7 @@ function printForm() {
                     <label for="">Account Number:</label>
                   </div>
                   <div class="col-sm-8">
-                    <input type="text" class="form-control text-dark bg-light" name="account_number" id="account_number">
+                    <input type="text" class="form-control text-dark bg-light" value="{{ ind.bank_account_no }}" name="account_number" id="account_number">
                   </div>
                 </div>
               </div>
@@ -1324,6 +1324,7 @@ function printForm() {
                   <div class="col-sm-8">
                     <select class="form-control text-dark bg-light" name="parent_account22" id="parent_account22">
                       <option value="" class="bg-dark text-light text-center" disabled selected>Select Option</option>
+                      <option value="{{ ind.currency }}" selected>{{ ind.currency }}</option>
                       
                       
                     </select>
@@ -1341,9 +1342,9 @@ function printForm() {
                   </div>
                   <div class="col-sm-8">
                     <select class="form-control text-dark bg-light" name="parent_account32" id="parent_account32">
-                      <option value="" class="bg-dark text-light text-center" disabled selected>Select Option</option>
-                      
-                      
+                      <option value="" class="bg-dark text-light text-center" disabled>Select Option</option>
+                      <option value="{{ ind.currency }}" selected>{{ ind.currency }}</option>
+                             
                     </select>
                   </div>
                 </div>
@@ -1689,8 +1690,8 @@ function printForm() {
       }else if(vals == "Credit Card"){
         document.getElementById('message_hd').innerHTML = "Liability"
         document.getElementById('message').innerHTML = ""
-        document.getElementById("name").style.display="none";
-        document.getElementById("credit").style.display="block";
+        document.getElementById("name").style.display="block";
+        document.getElementById("credit").style.display="none";
         document.getElementById("cr_div").style.display="block";
         document.getElementById("sub_div").style.display="none";
         document.getElementById("acc_bo_div").style.display="none";
