--- a/zohoapp/templates/chartofaccount_home.html
+++ b/zohoapp/templates/chartofaccount_home.html
@@ -6,6 +6,79 @@
   a{
     color: rgb(210, 132, 30);
   }
+
+ /* .......................................... search box1.............. */
+ .select-box1{
+      position: relative;
+    }
+    .select-option1{
+      position: relative;
+    }
+    .select-option1 input{
+      width: 100%;
+      cursor: pointer;
+      background-color: white;
+      color: black;
+      border-radius: 7px;
+      padding: 10px 15px;
+      border: 0 !important;
+      outline: 0 !important;
+    }
+    .select-option1:after{
+      content: "";
+      border-top: 12px solid #000;
+      border-left: 8px solid transparent;
+      border-right: 8px solid transparent;
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      margin-top: -8px;
+
+    }
+    .content1{
+      background-color: white;
+      position: absolute;
+      color: black;
+      border-radius: 7px;
+      margin-top: 15px;
+      width: 100%;
+      z-index: 999;
+      padding: 20px;
+      display: none;
+    }
+    .search1 input{
+      width: 100%;
+      font-size: 17px;
+      padding: 15px;
+      outline: 0;
+      border: 1px solid #b3b3b3;
+      border-radius: 5px;
+    }
+    .options1{
+      margin-top: 10px;
+      max-height: 150px;
+      overflow-y: auto;
+      padding: 0;
+      
+    }
+    .options1 li{
+      padding: 10px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+      border-bottom: 1px solid gray;
+    }
+    .select-box1.active .content1{
+      display: block;
+    }
+    .select-box1.active .select-option1:after{
+      transform: rotate(-180deg);
+    }
+    
+
+
+
+
+
 </style>
 
   <div class="row">
@@ -102,7 +175,7 @@
 
         <div class="row mt-4">
           <div class="col-sm-8">
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-sm-4">
                 <label for="">Account Type:</label>
               </div>
@@ -140,7 +213,100 @@
 
                 </select>
               </div>
+            </div> -->
+
+
+            <!-- .............................................. -->
+
+            <div class="row">
+              <div class="col-sm-4">
+                <label for="">Account Type:</label>
+              </div>
+              <div class="col-sm-8">
+                <div class="select-box1" onclick="message()">
+                  <div class="select-option1" >
+                    <input type="text" placeholder="select" id="soValue1" name="account_type"  readonly>
+                  </div>
+                  <div class="content1" id="myDropdown1">
+                    <div class="search1">
+                      <input type="text" placeholder="search" id="myInput1" onkeyup="filterFunction1()">
+                    </div>
+                    <ul class="options1">
+                      <div class="opt">
+                        Assets
+                       <li>Other Assets</li>
+                       <li>Other Current Assets</li>
+                       <li>Cash</li>
+                       <li>Bank</li>
+                       <li>Fixed Asset</li>
+                       <li>Stock</li>
+                       <li>Payment Clearing</li>
+                      </div>
+                      
+                       <div class="opt">
+                        Liability
+                       <li>Other Liability</li>
+                       <li>Other Current Liability</li>
+                       <li>Credit Card</li>
+                       <li>Long Term Liability</li>
+                       <li>Overseas Tax Payable</li>
+                       </div>
+        
+                       <div class="opt">
+                        Eqity
+                       <li>Eqity</li>                  
+                       </div>
+        
+                       <div class="opt">
+                        Income
+                       <li>Income</li>   
+                       <li>Other Income</li>               
+                       </div>
+        
+                       <div class="opt">
+                        Expense
+                       <li>Expense</li>   
+                       <li>Cost Of Goods Sold</li>  
+                       <li>Other Expense</li>             
+                       </div>
+                    </ul>
+                    
+                   
+        
+                  </div>
+                </div>
+               
+                
+              </div>
+             
+              <script>
+                const selectBox1=document.querySelector('.select-box1');
+                const selectOption1=document.querySelector('.select-option1');
+                const optionsList1=document.querySelectorAll('.options1 li');
+                const soValue1=document.querySelector('#soValue1');
+          
+                selectOption1.addEventListener('click',function(){
+                  selectBox1.classList.toggle('active')
+                })
+          
+                optionsList1.forEach(function(optionsListSingle){
+                  optionsListSingle.addEventListener('click',function(){
+                    text=this.textContent;
+                    soValue1.value=text;
+                    selectBox1.classList.remove('active')
+          
+                  })
+                })
+              </script>
             </div>
+
+            <!-- ..................................... -->
+
+
+
+
+
+
             <div id="name" style="display: block;">
               <div class="row mt-3">
                 <div class="col-sm-4">
@@ -273,11 +439,16 @@
 <script>
   function message() {
   
-    var vals= document.getElementById('account_type').value
+    var vals= document.getElementById('soValue1').value
     console.log(vals)
     if(vals == "Other Assets"){
       document.getElementById('message_hd').innerHTML = "Assets"
       document.getElementById('message').innerHTML = "Track special assets like goodwill and other intangible assets"
+      document.getElementById("sub_div").style.display="none";
+      document.getElementById("name").style.display="block";
+      document.getElementById("credit").style.display="none";
+      document.getElementById("acc_bo_div").style.display="none";
+      document.getElementById("cr_div").style.display="none";
 
     }else if(vals == "Other Current Assets"){
       document.getElementById('message_hd').innerHTML = "Assets"
@@ -318,7 +489,7 @@
         `To keep track of bank accounts like Savings, Checking, and Money Market accounts`
       )
 
-    }else if(vals == "Fixed Assets"){
+    }else if(vals == "Fixed Asset"){
       document.getElementById('message_hd').innerHTML = "Assets"
       document.getElementById('message').innerHTML = ""
       document.getElementById("sub_div").style.display="block";
@@ -512,6 +683,38 @@
     
     
 };
+</script>
+
+
+<script>
+  function filterFunction1() {
+   var input, filter, ul, li, a, i,b,j;
+   input = document.getElementById("myInput1");
+   filter = input.value.toUpperCase();
+   div = document.getElementById("myDropdown1");
+   a = div.getElementsByClassName('opt');
+   b = div.getElementsByTagName('li');
+
+   for (i = 0; i < a.length; i++) {
+     txtValue = a[i].textContent||a[i].innerText;
+     if (txtValue.toUpperCase().indexOf(filter) > -1) {
+       a[i].style.display = "";
+     } 
+     else {
+       a[i].style.display = "none";
+     }     
+   }  
+   for (j = 0; j < b.length; j++) {
+         txtValue = b[j].textContent || b[j].innerText;
+         if (txtValue.toUpperCase().indexOf(filter) > -1) {
+           b[j].style.display = "";
+          } 
+          else {
+            b[j].style.display = "none";
+          }
+    }
+       
+ }
 </script>
 
 <script>
