--- a/zohoapp/templates/chartofaccount_view.html
+++ b/zohoapp/templates/chartofaccount_view.html
@@ -3,6 +3,23 @@
 {% block content %}
 
 <style>
+  .modal{
+    z-index: 9999;
+    overflow: scroll;
+  }
+  #aover{
+    color: rgb(214, 141, 5);
+  }
+/* #aover:hover{
+  font-weight: bold;
+} */
+tr:hover{
+  background-color: #8f8e8e2a;
+  font-weight: bold;
+
+}
+
+
     /* width */
     ::-webkit-scrollbar {
         width: 10px;
@@ -322,9 +339,38 @@ function printForm() {
                 <tr>
                     <td ><hr style="border-top: 1px solid white;"></td>
                 </tr> -->
-                <tr class="mt-3 pt-5 mb-3 ">
-                  <td><a href="{% url 'chartofaccount_view' view.id%}" style="color: rgb(206, 135, 5);">{{view.account_name}}</a></td>
-                  <td class="pt-3">{{view.account_type}} <br>
+                <tr class="mt-5 pt-5 pb-5 mb-5">
+                  <!-- <td><a href="{% url 'chartofaccount_view' view.id%}" style="color: rgb(206, 135, 5);">{{view.account_name}}</a></td> -->
+
+                  {% if view.parent_account == "GST Payable" %}
+                  <td class="text-light pt-4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <img width="30" height="25" src="https://img.icons8.com/nolan/64/arrow.png" alt="arrow"/>
+                    <a id="aover" href="{% url 'chartofaccount_view' view.id%}">{{view.account_name}}</a> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;{{view.account_type}} </td>
+                  {% endif %}
+                  {% if view.parent_account == "Input Tax Credits" %}
+                    <td class="text-light pt-4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                      <img width="30" height="25" src="https://img.icons8.com/nolan/64/arrow.png" alt="arrow"/>
+                      <a id="aover" href="{% url 'chartofaccount_view' view.id%}">{{view.account_name}}</a> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  {{view.account_type}}</td>
+                    {% endif %}
+                    {% if view.parent_account != "Input Tax Credits" %}
+                       {% if view.parent_account != "GST Payable" %}
+    
+                       {% if view.account_name == "GST Payable" or  view.account_name == "Input Tax Credits" %}
+                          <td class="text-light pt-4">
+                            <img width="35" height="35" src="https://img.icons8.com/avantgarde/100/folder-invoices.png" alt="folder-invoices"/>                    
+        
+                            <a id="aover" href="{% url 'chartofaccount_view' view.id%}">{{view.account_name}}</a> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{view.account_type}} </td>
+                        {% else %}
+                        <td class="text-light pt-4"><a id="aover" href="{% url 'chartofaccount_view' view.id%}">{{view.account_name}}</a> <br> {{view.account_type}}  </td>
+                        {% endif %}
+    
+                       {% endif %}               
+                    {% endif %}
+
+
+
+
+                  <td class="pt-4">
                     {{view.status}}
                   </td>
                   
@@ -353,6 +399,11 @@ function printForm() {
                     <a href="" class="btn btn-dark m-1 text-white " 
                         data-toggle="modal" data-target="#upload_account" title="Upload" id="pdf">
                         <i class="mdi mdi-file-pdf-box"></i></a>
+                       <!-- {% if estimate.attachment != ""%} -->
+                    <a href="" class="btn btn-dark m-1 text-white"
+                    data-toggle="modal" data-target="#download_account" title="Download Attached File">
+                    <span class="mdi mdi-download"></span></a>
+                <!-- {%endif%} -->
                     <a href="" onclick="printForm()" class="btn btn-dark m-1 text-white btn_print" 
                         data-toggle="tooltip" title="Print">
                         <i class="mdi mdi-printer"></i></a>
@@ -360,11 +411,7 @@ function printForm() {
                          data-toggle="tooltip" title="Email">
                         <i class="mdi mdi-email"></i></a>
                     
-                    <!-- {% if estimate.attachment != ""%} -->
-                    <a href="" class="btn btn-dark m-1 text-white"
-                        data-toggle="modal" data-target="#download_account" title="Download Attached File">
-                        <span class="mdi mdi-download"></span></a>
-                    <!-- {%endif%} -->
+                   
 
                     
                 </div>
@@ -422,7 +469,6 @@ function printForm() {
           </div>
           <div class="row mt-4">
             <div class="col-sm-8">             
-              <!-- ................................................................... -->
       <div class="row">
         <div class="col-sm-4">
           <label for="">Account Type:</label>
@@ -2179,7 +2225,7 @@ function printForm() {
               </div>
               {% endif %}
 
-              {% if ind.account_type == " Other Current Liability" %}
+              {% if ind.account_type == "Other Current Liability" %}
               <div class="alert alert-warning alert-dismissible fade show">
                 <span id="message_hd1">Liability</span> <br>
                 <span id="message1">
@@ -2190,7 +2236,7 @@ function printForm() {
               </div>
               {% endif %}
 
-              {% if ind.account_type == " Credit Card" %}
+              {% if ind.account_type == "Credit Card" %}
               <div class="alert alert-warning alert-dismissible fade show">
                 <span id="message_hd1">Liability</span> <br>
                 <span id="message1">
@@ -2199,7 +2245,7 @@ function printForm() {
               </div>
               {% endif %}
 
-              {% if ind.account_type == " Long Term Liability" %}
+              {% if ind.account_type == "Long Term Liability" %}
               <div class="alert alert-warning alert-dismissible fade show">
                 <span id="message_hd1">Liability</span> <br>
                 <span id="message1">
@@ -3463,7 +3509,7 @@ function show_parent(){
     table = document.getElementById("MyTable");
     tr = table.getElementsByTagName("tr");
     for (i = 0; i < tr.length; i++) {
-      td = tr[i].getElementsByTagName("td")[1];
+      td = tr[i].getElementsByTagName("td")[0];
       if (td) {
         if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
           tr[i].style.display = "";
